--- a/web/template/index2.html
+++ b/web/template/index2.html
@@ -37,6 +37,11 @@
         <input type="submit" name="btncrea" value="Crea Albero" class="btn-large waves-effect waves-light orange">
       </div>
           </form>
+       <form name="elimina"  action="eliminazioneAlbero">
+      <div class="row center">
+        <input type="submit" name="btndelete" value="Cancella Un Albero" class="btn-large waves-effect waves-light orange">
+      </div>
+          </form>
       <br><br>
       <form class="col s12" method="POST" action="esecuzioneCalcolo">
 <label>Seleziona albero per effettuare il calcolo</label>
